Added validate of annualSalary

--- a/clase-6/tarea-2.css
+++ b/clase-6/tarea-2.css
@@ -64,4 +64,6 @@ body {
     top: 60px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
   }
-  
+  .error {
+    border: 1px solid red;
+  }
